--- a/Clase 6 - Desafío Incorporar Arrays/index.html
+++ b/Clase 6 - Desafío Incorporar Arrays/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simulador interactivo</title>
+    <title>Clase 6</title>
 </head>
 <body>
-    <script src="./simulador.js"></script>
+    <script src="./main.js"></script>    
 </body>
 </html>
-
