--- a/Clase 11 - Segunda Entrega del Proyecto Final/index.html
+++ b/Clase 11 - Segunda Entrega del Proyecto Final/index.html
@@ -11,9 +11,10 @@
     <title>Segunda Entrega del Proyecto Final</title>
 </head>
 <body>
-
-    <h5>Work Shop</h5>
-
+    <div class="container" id="containerTitulo">
+        <h1 id="titulo">Fiskane</h1>
+        <h5 id="subtitulo">Venta de zapatillas</h5>
+    </div>
     <div class="container">
         <div class="row">
             <main id="items" class="col-sm-8 row"></main>
@@ -21,8 +22,8 @@
                 <h2>Carrito</h2>
                 <ul id="carrito" class="list-group"></ul>
                 <hr>
-                <p class="text-right">Total: <span id="total"></span>&euro;</p>
-                <button id="boton-vaciar" class="btn btn-danger">Vaciar</button>
+                <p class="text-right">Total: $<span id="total"></span></p>
+                <button id="boton-vaciar" class="btn btn-secondary">Vaciar</button>
             </aside>
         </div>
     </div>
