--- a/Clase 12 - Operadores avanzados/index.html
+++ b/Clase 12 - Operadores avanzados/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Segunda Entrega del Proyecto Final</title>
+    <title>Clase 12</title>
 </head>
 <body>
     <div class="container" id="containerTitulo">
